--- a/resume.html
+++ b/resume.html
@@ -17,10 +17,10 @@
     <div class="container">
       <header id="main-header">
         <div class="row no-gutters">
-          <div class="col-lg-2 col-md-3">
+          <div class="col-lg-3 col-md-3">
             <img src="img/ab.jpg">
           </div>
-          <div class="col-lg-10 col-md-9">
+          <div class="col-lg-9 col-md-9">
             <div class="d-flex flex-column">
               <div class="p-5 bg-dark text-white">
                 <div class="d-flex flex-row justify-content-between align-items-center">
@@ -49,6 +49,9 @@
                     </a>
                   </div>
                 </div>
+              </div>
+              <div class="p-4 bg-black">
+                Front End Developer.Seek an Opportunity
               </div>
             </div>
           </div>
