--- a/resume.html
+++ b/resume.html
@@ -73,12 +73,28 @@
                   <i class="fas fa-envelope fa-2x d-block"></i>
                   <span class="d-none d-sm-block">Contact</span>
                 </div>
-
               </div>
             </div>
           </div>
         </div>
       </header>
+
+
+      <!--Footer Section -->
+      <footer id=footer-main>
+        <div class="row">
+          <div class="col-md-6">
+            <a href="#" class="btn btn-outine-light">
+              <i class="fas fa-cloud"></i>Download Resume
+            </a>
+          </div>
+        </div>
+      </footer>
+
+
+
+
+
     </div>
 
 
