--- a/resume.html
+++ b/resume.html
@@ -81,10 +81,10 @@
 
 
       <!--Footer Section -->
-      <footer id=footer-main>
+      <footer id="footer-main" class="p-5 bg-dark text-white">
         <div class="row">
           <div class="col-md-6">
-            <a href="#" class="btn btn-outine-light">
+            <a href="#" class="btn btn-outline-light">
               <i class="fas fa-cloud"></i>Download Resume
             </a>
           </div>
