--- a/resume.html
+++ b/resume.html
@@ -51,7 +51,7 @@
                 </div>
               </div>
               <div class="p-4 bg-black">
-                Front End Developer.Seek an Opportunity
+                <marquee direction="left" onmouseover="this.stop();" onmouseout="this.start();">Python Enthusiasm,Front End Developer.Seek an Opportunity</marquee>
               </div>
               <div class="d-flex flex-row text-white align-items-stretch text-center">
                 <div class="port-item p-4 bg-primary" data-toggle="collapse" data-target="#home">
@@ -79,7 +79,45 @@
         </div>
       </header>
 
+        <!-- Home Collapse show -->
 
+        <div id="home" class="collapse show">
+          <div class="card card-body bg-primary text-white py-5">
+            <h2><span class="blinking">Welcome to my Resume</span></h2>
+            <marquee direction="left" onmouseover="this.stop();" onmouseout="this.start();">Python and Front end Enthusiasm.Looking an organization for showing and enhancing my skills.</marquee>
+          </div>
+          <div class="card card-body py-5">
+            <h3><span class="blinking">My Skills</span></h3>
+            <marquee behavior="scroll" direction="up" onmouseover="this.stop();" onmouseout="this.start();">To enhance my professional skills, capabilities and knowledge in an organization which recognizes the value of hard work and trusts me with responsibilities and challenges</marquee>
+            <hr>
+            <h4>HTML 5</h4>
+            <div class="progress mb-3">
+              <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:90%">90%
+              </div>
+            </div>
+            <h4>CSS</h4>
+            <div class="progress mb-3">
+              <div  class="progress-bar progress-bar-striped active bg-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:80%">80%
+              </div>
+            </div>
+             <h4>Python</h4>
+            <div class="progress mb-3">
+              <div  class="progress-bar progress-bar-striped bg-primary active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:75%">
+              </div>
+            </div>
+             <h4>Django</h4>
+            <div class="progress mb-3">
+              <div  class="progress-bar progress-bar-striped bg-danger active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+              </div>
+            </div>
+             <h4>Machine Learning</h4>
+            <div class="progress mb-3">
+              <div class="progress-bar progress-bar-striped bg-warning active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:60%">
+              </div>
+            </div>
+
+          </div>
+        </div>
       <!--Footer Section -->
       <footer id="footer-main" class="p-5 bg-dark text-white">
         <div class="row">
@@ -111,6 +149,7 @@
       crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
       crossorigin="anonymous"></script>
-      <script src="https://cdn.ckeditor.com/4.14.1/standard/ckeditor.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </body>
 </html>
