resume collapse started

--- a/resume.html
+++ b/resume.html
@@ -83,7 +83,7 @@
 
         <div id="home" class="collapse show">
           <div class="card card-body bg-primary text-white py-5">
-            <h2><span class="blinking">Welcome to my Resume</span></h2>
+            <h2><span class="blinking">Welcome to my Resume Portfolio</span></h2>
             <marquee direction="left" onmouseover="this.stop();" onmouseout="this.start();">Python and Front end Enthusiasm.Looking an organization for showing and enhancing my skills.</marquee>
           </div>
           <div class="card card-body py-5">
@@ -115,9 +115,23 @@
               <div class="progress-bar progress-bar-striped bg-warning active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:60%">
               </div>
             </div>
-
           </div>
         </div>
+           <!-- Home Collapse show end -->
+
+
+           <!-- Resume Collapse Show -->
+        <div id="resume" class="collapse show">
+          <div class="card card-body bg-success text-white py-5">
+            <h2><span class="blinking">Welcome to my Resume</span></h2>
+            <marquee direction="left" onmouseover="this.stop();" onmouseout="this.start();">Python and Front end Enthusiasm.Looking an organization for showing and enhancing my skills.</marquee>
+          </div>
+        </div>
+       
+       
+
+
+
       <!--Footer Section -->
       <footer id="footer-main" class="p-5 bg-dark text-white">
         <div class="row">
