--- a/resume.html
+++ b/resume.html
@@ -126,6 +126,12 @@
             <h2><span class="blinking">Welcome to my Resume</span></h2>
             <marquee direction="left" onmouseover="this.stop();" onmouseout="this.start();">Python and Front end Enthusiasm.Looking an organization for showing and enhancing my skills.</marquee>
           </div>
+
+          <div class="card card-body py-5">
+            <h3>Where I have worked</h3>
+            <marquee  direction="up" style="color: blue;" onmouseover="stop();" onmouseout="start();">I have done many projects for the development of static website pages,Themes,and currentlly i am learning Angular,JavaScript
+            for front end complete package.</marquee>
+          </div>
         </div>
        
        
