resume where i worked added

--- a/resume.html
+++ b/resume.html
@@ -131,6 +131,44 @@
             <h3>Where I have worked</h3>
             <marquee  direction="up" style="color: blue;" onmouseover="stop();" onmouseout="start();">I have done many projects for the development of static website pages,Themes,and currentlly i am learning Angular,JavaScript
             for front end complete package.</marquee>
+            <div class="card-deck">
+              <div class="card">
+                <div class="card-body">
+                  <h4 class="card-title"><span style="color: blue;"class="blinking">Codalex project</span></h4>
+                  <p class="card-text">Codalex is a static educational website.</p>
+                  <p class="p-2 mb-3 bg-dark text-white">Position : Front End Developer</p>
+                  <p class="p-2 mb-3 bg-dark text-white">Phone : +91-7248367610</p>
+                </div>
+                <div class="card-footer">
+                  <h6 class="text-muted">Dates : 2019-2020</h6>
+                </div>
+              </div>
+
+               <div class="card">
+                <div class="card-body">
+                  <h4 class="card-title"><span style="color: red;" class="blinking">Codalex project</span></h4>
+                  <p class="card-text">Codalex is a static educational website.</p>
+                  <p class="p-2 mb-3 bg-dark text-white">Position : Front End Developer</p>
+                  <p class="p-2 mb-3 bg-dark text-white">Phone : +91-7248367610</p>
+                </div>
+                <div class="card-footer">
+                  <h6 class="text-muted">Dates : 2019-2020</h6>
+                </div>
+              </div>
+
+               <div class="card">
+                <div class="card-body">
+                  <h4 class="card-title"><span style="color: green;" class="blinking">Codalex project</span></h4>
+                  <p class="card-text">Codalex is a static educational website.</p>
+                  <p class="p-2 mb-3 bg-dark text-white">Position : Front End Developer</p>
+                  <p class="p-2 mb-3 bg-dark text-white">Phone : +91-7248367610</p>
+                </div>
+                <div class="card-footer">
+                  <h6 class="text-muted">Dates : 2019-2020</h6>
+                </div>
+              </div>
+
+            </div>
           </div>
         </div>
        
