--- a/resume.html
+++ b/resume.html
@@ -123,8 +123,8 @@
            <!-- Resume Collapse Show -->
         <div id="resume" class="collapse show">
           <div class="card card-body bg-success text-white py-5">
-            <h2><span class="blinking">Welcome to my Resume</span></h2>
-            <marquee direction="left" onmouseover="this.stop();" onmouseout="this.start();">Python and Front end Enthusiasm.Looking an organization for showing and enhancing my skills.</marquee>
+              <h2><span class="blinking">Welcome to my Resume</span></h2>
+              <marquee direction="left" onmouseover="this.stop();" onmouseout="this.start();">Python and Front end Enthusiasm.Looking an organization for showing and enhancing my skills.</marquee>
           </div>
 
           <div class="card card-body py-5">
@@ -167,8 +167,17 @@
                   <h6 class="text-muted">Dates : 2019-2020</h6>
                 </div>
               </div>
-
             </div>
+          </div>
+        </div>
+
+
+        <!-- Work -->
+        <div class="collapse" id="work">
+          <div class="card card-body bg-danger text-white py-5">
+            <h2>My Work</h2>
+              <marquee  direction="up" onmouseover="stop();" onmouseout="start();">I have done many projects for the development of static website pages,Themes,and currentlly i am learning Angular,JavaScript
+            for front end complete package.</marquee> 
           </div>
         </div>
        
