my work completed

--- a/resume.html
+++ b/resume.html
@@ -179,6 +179,63 @@
               <marquee  direction="up" onmouseover="stop();" onmouseout="start();">I have done many projects for the development of static website pages,Themes,and currentlly i am learning Angular,JavaScript
             for front end complete package.</marquee> 
           </div>
+          <div class="card card-body">
+            <h3>What have I Built and make design ?</h3>
+               <marquee  direction="left" onmouseover="stop();" onmouseout="start();">I have done many projects for the development of static website pages,Themes,and currentlly i am learning Angular,JavaScript
+            for front end complete package.</marquee>
+          </div>
+          <div class="row no-gutters">
+            <div class="col-md-3">
+              <a href="https://unsplash.it/1200/768.jpg?image=252" data-toggle="lightbox">
+                <img src="https://unsplash.it/600.jpg?image=252" alt="" class="img-fluid">
+              </a>
+            </div>
+
+            <div class="col-md-3">
+              <a href="https://unsplash.it/1200/768.jpg?image=253" data-toggle="lightbox">
+                <img src="https://unsplash.it/600.jpg?image=253" alt="" class="img-fluid">
+              </a>
+            </div>
+
+            <div class="col-md-3">
+              <a href="https://unsplash.it/1200/768.jpg?image=254" data-toggle="lightbox">
+                <img src="https://unsplash.it/600.jpg?image=254" alt="" class="img-fluid">
+              </a>
+            </div>
+
+            <div class="col-md-3">
+              <a href="https://unsplash.it/1200/768.jpg?image=255" data-toggle="lightbox">
+                <img src="https://unsplash.it/600.jpg?image=255" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+
+           <div class="row no-gutters">
+            <div class="col-md-3">
+              <a href="https://unsplash.it/1200/768.jpg?image=256" data-toggle="lightbox">
+                <img src="https://unsplash.it/600.jpg?image=256" alt="" class="img-fluid">
+              </a>
+            </div>
+
+            <div class="col-md-3">
+              <a href="https://unsplash.it/1200/768.jpg?image=257" data-toggle="lightbox">
+                <img src="https://unsplash.it/600.jpg?image=257" alt="" class="img-fluid">
+              </a>
+            </div>
+
+            <div class="col-md-3">
+              <a href="https://unsplash.it/1200/768.jpg?image=258" data-toggle="lightbox">
+                <img src="https://unsplash.it/600.jpg?image=258" alt="" class="img-fluid">
+              </a>
+            </div>
+
+            <div class="col-md-3">
+              <a href="https://unsplash.it/1200/768.jpg?image=259" data-toggle="lightbox">
+                <img src="https://unsplash.it/600.jpg?image=259" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
         </div>
        
        
