contact form started

--- a/resume.html
+++ b/resume.html
@@ -240,6 +240,13 @@
        
        
 
+        <!-- Contact  -->
+        <div class="collapse" id="contact">
+          <div class="card card-body text-white bg-danger py-5">
+            <h2>Contact Form</h2>
+            <p>We are here to help you</p>
+          </div>
+        </div>
 
 
       <!--Footer Section -->
