contact form started

--- a/resume.html
+++ b/resume.html
@@ -242,9 +242,9 @@
 
         <!-- Contact  -->
         <div class="collapse" id="contact">
-          <div class="card card-body text-white bg-danger py-5">
+          <div class="card card-body text-black bg-warning py-5">
             <h2>Contact Form</h2>
-            <p>We are here to help you</p>
+            <p class="lead">We are here to help you</p>
           </div>
         </div>
 
