--- a/resume.html
+++ b/resume.html
@@ -246,6 +246,46 @@
             <h2>Contact Form</h2>
             <p class="lead">We are here to help you</p>
           </div>
+
+          <div class="card card-body py-5">
+            <h3>Get In Touch</h3>
+            <P>We are here to help you</P>
+            <form>
+              <div class="form-group">
+                <div class="input-group input-group-lg">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text bg-danger text-white">
+                      <i class="fa fa-user"></i>
+                    </span>
+                  </div>
+                  <input type="text" placeholder="name" class="form-control bg-dark text-white" name="">
+                </div>
+              </div>
+
+              <div class="form-group">
+                <div class="input-group input-group-lg">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text bg-danger text-white">
+                      <i class="fa fa-envelope"></i>
+                    </span>
+                  </div>
+                  <input type="email" placeholder="email" class="form-control bg-dark text-white" name="">
+                </div>
+              </div>
+
+              <div class="form-group">
+                <div class="input-group input-group-lg">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text bg-danger text-white">
+                      <i class="fa fa-pencil-alt"></i>
+                    </span>
+                  </div>
+                  <textarea placeholder="Enter your text here" class="form-control bg-dark text-white" name=""></textarea>
+                </div>
+              </div>
+              <input type="submit" value="Submit" class="btn btn-danger btn-block btn-lg">
+            </form>
+          </div>
         </div>
 
 
